fix create sec group
