# users/serializer.py
@@ -10,7 +10,7 @@ class UserSerializer(serializers.ModelSerializer):
 
     class Meta:
         model = User
-        fields = ['id', 'first_name', 'last_name', 'email', 'national_id', 'phone_number']
+        fields = ['id', 'first_name', 'last_name', 'email', 'national_id', 'phone_number' ,'password']
         extra_kwargs = {
             'password': {'write_only': True}
         }
